# contextro

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeepSeek_V4.md  Dockerfile  EVALUATION.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  commit-one-by-one.sh  contextia-mcp-ci  contextro-evaluation.md  contextro-not-working.md  docker-compose.dev.yml  docker-compose.yml  evaluation.md  glama.json  install.sh  instruction-prompt.md  llms-full.txt  llms.txt  opencode.json  paper_revision_checklist.md  pyproject.toml  requirements.txt  setup.py  setup.sh  smithery.yaml
.agent/skills/: README.md
.agents/skills/: README.md
.contextro-docs/: architecture.md
.contextro-docs-audit/: architecture.md  overview.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alpha.yml  ci.yml  publish.yml  release.yml
.intent/: config.json
.kilo/plans/: 1778466541994-tidy-harbor.md
.playwright-mcp/: page-2026-05-09T02-19-46-268Z.yml  page-2026-05-09T02-24-12-860Z.yml  page-2026-05-09T02-24-26-936Z.yml  page-2026-05-09T02-24-49-359Z.yml  page-2026-05-09T02-25-33-020Z.yml  page-2026-05-09T02-26-28-430Z.yml  page-2026-05-09T02-26-33-046Z.yml  page-2026-05-09T02-27-32-343Z.yml  page-2026-05-09T02-27-41-992Z.yml  page-2026-05-09T02-28-10-427Z.yml  page-2026-05-09T02-29-54-567Z.yml  page-2026-05-09T02-30-49-214Z.yml  page-2026-05-09T02-31-06-123Z.yml  page-2026-05-11T21-54-22-401Z.yml
crates/: Cargo.toml  deny.toml  paired_study.py  paired_study_results.json
crates/.contextro-docs/: overview.md
crates/contextro-config/: Cargo.toml
crates/contextro-config/src/: lib.rs  lib.rs.graph.md
crates/contextro-core/: Cargo.toml
crates/contextro-core/src/: errors.rs  errors.rs.graph.md  graph.rs  graph.rs.graph.md  lib.rs  models.rs  models.rs.graph.md  traits.rs  traits.rs.graph.md
crates/contextro-engines/: Cargo.toml
crates/contextro-engines/src/: bm25.rs  bm25.rs.graph.md  cache.rs  cache.rs.graph.md  fusion.rs  fusion.rs.graph.md  graph.rs  graph.rs.graph.md  lib.rs  sandbox.rs  sandbox.rs.graph.md  search.rs  search.rs.graph.md  vector.rs  vector.rs.graph.md
crates/contextro-git/: Cargo.toml
crates/contextro-git/src/: branch_watcher.rs  commit_indexer.rs  commit_indexer.rs.graph.md  cross_repo.rs  cross_repo.rs.graph.md  lib.rs
crates/contextro-indexing/: Cargo.toml
crates/contextro-indexing/src/: chunker.rs  chunker.rs.graph.md  embedding.rs  embedding.rs.graph.md  file_scanner.rs  file_scanner.rs.graph.md  lib.rs  pipeline.rs  pipeline.rs.graph.md
crates/contextro-indexing/tests/: bench_index.rs  bench_index.rs.graph.md
crates/contextro-memory/: Cargo.toml
crates/contextro-memory/src/: archive.rs  archive.rs.graph.md  lib.rs  session.rs  session.rs.graph.md  store.rs  store.rs.graph.md
crates/contextro-parsing/: Cargo.toml
crates/contextro-parsing/src/: language.rs  language.rs.graph.md  lib.rs  treesitter.rs  treesitter.rs.graph.md
crates/contextro-server/: Cargo.toml
crates/contextro-server/src/: bench.rs  http.rs  http.rs.graph.md  main.rs  main.rs.graph.md  state.rs  state.rs.graph.md  study.rs  study.rs.graph.md  update_check.rs  update_check.rs.graph.md
crates/contextro-tools/: Cargo.toml
crates/contextro-tools/src/: analysis.rs  analysis.rs.graph.md  artifacts.rs  artifacts.rs.graph.md  code.rs  code.rs.graph.md  git_tools.rs  git_tools.rs.graph.md  graph_tools.rs  graph_tools.rs.graph.md  lib.rs  memory.rs  memory.rs.graph.md  search.rs  search.rs.graph.md  session.rs  session.rs.graph.md
deploy/alpha/: docker-compose.yml  pull-and-restart.sh
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXPERIMENT_FRAMEWORK.md  FUTURE_CONTRIBUTIONS.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  PROJECT_INFO.md  RELEASE_CANDIDATE_TESTING.md  RESEARCH.md  RUST_MIGRATION.md  RUST_MIGRATION_PLAN.md  USAGE_GUIDE.md  distribution-plan.md
docs/blog/: contextro-launch.html  contextro-launch.md  generate_assets.py
docs/plans/: PHASE_8_ADVANCED_INTEL.md
docs/publication/: README.md  contextro-paper.html  contextro-tool-api-schemas.json  edit-correctness-benchmark.json  evaluation_of_paper.md  (+15 more)
rust/ctx_fast/: Cargo.toml
rust/ctx_fast/src/: file_scanner.rs  git_ops.rs  hasher.rs  lib.rs
scripts/: bench_final.py  benchmark_browser_use.py  benchmark_browser_use_results.json  benchmark_chunk_profiles.py  benchmark_disclosure.py  benchmark_edit_assistance.py  benchmark_embeddings.py  benchmark_embeddings_full.py  benchmark_end_to_end_correctness.py  benchmark_platform_live.py  benchmark_public_proxy.py  benchmark_results.json  benchmark_results_full.json  benchmark_retrieval_quality.py  benchmark_token_efficiency.py  benchmark_utils.py  commit-one-by-one.sh  dev_http_server.py  docker_healthcheck.py  edit_benchmark_results.json  evaluate_contextia_skill.py  experiment_platform.py  export_tool_api_schemas.py  init.sh  public_proxy_repo.py  release-candidate.sh  results.tsv  results_browser_use.tsv  results_indexing_speed.tsv  results_platform_staging.tsv  sync-skills.sh  task_subset_robustness.py  test_tool.sh  token_benchmark_results.json
self_test/: README.md  demo_mcp.py
tests/: conftest.py  test_accelerator.py  test_analyze_tool.py  test_audit.py  test_bm25_engine.py  test_bootstrap_command.py  test_branch_watcher.py  test_chunker.py  test_cli.py  test_commit_indexer.py  test_config.py  test_cross_repo.py  test_e2e.py  test_editing.py  test_embedding_properties.py  test_exceptions.py  test_explain_tool.py  test_fusion.py  test_git_tools.py  test_graph_engine.py  test_graph_models.py  test_graph_persistence.py  test_graph_tools.py  test_health.py  test_hybrid_search.py  test_impact_tool.py  test_interfaces.py  test_language_registry.py  test_live_grep.py  test_memory_store.py  test_memory_usage.py  test_models.py  test_packaged_graph_reports.py  test_performance.py  test_permissions.py  test_pipeline.py  test_product_tools.py  test_rate_limiter.py  test_reranker.py  test_research_catalog.py  (+12 more)
(+471 files in other folders)
