[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "contextro"
version = "0.0.6"
description = "Contextro is a proprietary code intelligence MCP server for repository search and navigation"
readme = "README.md"
license = "Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Distillation Labs" },
]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "code-search", "semantic-search", "code-intelligence",
    "repository-navigation", "contextro",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastmcp>=2.0.0",
    "lancedb>=0.4.0",
    "model2vec>=0.3.0",
    "sentence-transformers>=3.0.0",
    "optimum>=1.19.0",
    "onnxruntime>=1.17.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
    "ast-grep-py>=0.28.0",
    "rustworkx>=0.15.0",
    "pathspec>=0.11.0",
    "tiktoken>=0.8.0",
    "watchdog>=3.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
gpu = [
    "sentence-transformers[onnx-gpu]>=3.0.0",
    "optimum[onnxruntime-gpu]>=1.19.0",
]
reranker = [
    "flashrank>=0.2.0",
]
model2vec = [
    "model2vec>=0.3.0",
]

[project.scripts]
contextro = "contextro_mcp.server:main"

[tool.maturin]
manifest-path = "rust/ctx_fast/Cargo.toml"
python-source = "src"
module-name = "contextro_mcp.ctx_fast"
bindings = "pyo3"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/bench_final.py" = ["E501"]
"scripts/benchmark_embeddings.py" = ["E501"]
"scripts/benchmark_embeddings_full.py" = ["E501"]
"src/contextro_mcp/formatting/response_builder.py" = ["E501"]
"src/contextro_mcp/indexing/pipeline.py" = ["E501"]
"src/contextro_mcp/server.py" = ["E501"]
"tests/test_e2e.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
