[package]
name = "contextro-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for Contextro with CTX_ env var support"
publish = false

[dependencies]
contextro-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
