[package]
name = "contextro-indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Indexing pipeline: discover, parse, chunk, embed, store"

[dependencies]
contextro-core = { workspace = true }
contextro-config = { workspace = true }
contextro-parsing = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
xxhash-rust = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
model2vec = { workspace = true }
ndarray = "0.16"
anyhow = { workspace = true }
parking_lot = { workspace = true }
