[package]
name = "contextro-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Code parsing with tree-sitter and ast-grep for Contextro"

[dependencies]
contextro-core = { workspace = true }
tree-sitter = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
