[package]
name = "contextro-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code parsing with tree-sitter and ast-grep for Contextro"
publish = false

[dependencies]
contextro-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
