[package]
name = "contextro-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Contextro MCP server binary"

[[bin]]
name = "contextro"
path = "src/main.rs"

[[bin]]
name = "contextro-bench"
path = "src/bench.rs"

[dependencies]
contextro-core = { workspace = true }
contextro-config = { workspace = true }
contextro-engines = { workspace = true }
contextro-indexing = { workspace = true }
contextro-memory = { workspace = true }
contextro-git = { workspace = true }
contextro-tools = { workspace = true }
contextro-parsing = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
