[package]
name = "contextro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Contextro MCP server binary"

[[bin]]
name = "contextro"
path = "src/main.rs"

[[bin]]
name = "contextro-bench"
path = "src/bench.rs"
doc = false

[[bin]]
name = "contextro-study"
path = "src/study.rs"
doc = false

[dependencies]
contextro-core = { workspace = true }
contextro-config = { workspace = true }
contextro-engines = { workspace = true }
contextro-indexing = { workspace = true }
contextro-memory = { workspace = true }
contextro-git = { workspace = true }
contextro-tools = { workspace = true }
contextro-parsing = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "5"
tiktoken-rs = "0.6"
