[package]
name = "ctx_fast"
version = "0.0.3"
edition = "2021"
description = "Rust-accelerated core for Contextro: file scanning, hashing, git ops"

[lib]
name = "ctx_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rayon = "1.10"
walkdir = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ignore = "0.4"  # .gitignore-aware file walking
